--- a/dada/templates/list_unsub_step1.tmpl
+++ b/dada/templates/list_unsub_step1.tmpl
@@ -21,7 +21,12 @@
 
 	<!-- /tmpl_if -->
 
+
 	<fieldset> 
+		
+	<!-- tmpl_if email_hint --> 
+		<h1>Address Hint: <!-- tmpl_var email_hint --></h1> 
+	<!-- /tmpl_if -->
 	
 	<p>
 		Please enter your 
