--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -1,4 +1,4 @@
-<!-- tmpl_if bounce_report --> 
+<!-- tmpl_if report --> 
 	<div> 
 	  <div style="max-width:350px; max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;">
 	
@@ -10,21 +10,28 @@
 	  </td> 
 	 </tr> 
 
-<!-- tmpl_loop bounce_report --> 
+<!-- tmpl_loop report --> 
 	<tr <!-- tmpl_if __odd__ -->class="alt"<!-- /tmpl_if -->> 
 	  <td>
+		
+		<!-- tmpl_if expr="((type eq 'soft_bounce') || (type eq 'hard_bounce'))" -->
 		<a class="modalbox"  href="./bounce_handler.cgi?flavor=cgi_bounce_score_search;query=<!-- tmpl_var email escape="URL" -->;chrome=0" title="Bounce Log for <!-- tmpl_var email escape="HTML" -->" >
 		 <!-- tmpl_var email -->
 	    </a>
+		<!-- tmpl_else --> 
+			<!-- tmpl_var email -->		
+		<!-- /tmpl_if --> 
+	
+	
 	  </td> 
 	 </tr>
 <!-- /tmpl_loop -->
 
 </table> 
-<p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var num_bounces -->&nbsp;</p> 
+<p style="text-align:right"><strong>Total:</strong> <!-- tmpl_var num -->&nbsp;</p> 
  </div>
 </div>
 
 <!-- tmpl_else --> 
-	<p class="alert">No <!-- tmpl_var title --> bounces to report.</p> 
+	<p class="alert">No <!-- tmpl_var title --> addresses to report.</p> 
 <!-- /tmpl_if -->
