Things should work, now.

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -181,65 +181,17 @@
     <label for="tracker_track_email"> 
      Track with Email Addresses
     </label><br />
-		Message Clickthroughs, and Opens will also track the subscriber's email address. 
+		Message Clickthroughs, and Opens will also track the subscriber's email address. Tracking data with the user's email address allows
+		more refined email analytics and reports. 
    </p>
   </td>
   </tr> 
 
 
-<!-- tmpl_if comment --> 
-   <tr> 
-  <td> 
-   <p>
-    <input type="checkbox" name="enable_forward_to_a_friend_logging" id="enable_forward_to_a_friend_logging"  value="1" <!-- tmpl_if list_settings.enable_forward_to_a_friend_logging -->checked="checked"<!--/tmpl_if --> 
-   </p>
-  </td> 
-  <td> 
-   <p>
-    <label for="enable_forward_to_a_friend_logging"> 
-     Track &quot;Forward to a Friend&quot;
-    </label> 
-   </p>
-  </td>
-  </tr>
-<!-- /tmpl_if --> 
-<!-- tmpl_if comment --> 
-
-   <tr> 
-  <td> 
-   <p>
-    <input type="checkbox" name="enable_view_archive_logging" id="enable_view_archive_logging"  value="1" <!-- tmpl_if list_settings.enable_view_archive_logging -->checked="checked"<!--/tmpl_if --> 
-   </p>
-  </td> 
-  <td> 
-   <p>
-    <label for="enable_view_archive_logging"> 
-     Track Archive Views
-    </label> 
-   </p>
-  </td>
-  </tr>
-<!-- /tmpl_if --> 
 
 
 
 
-<!-- tmpl_if comment --> 
-   <tr> 
-  <td> 
-   <p>
-    <input type="checkbox" name="enable_bounce_logging" id="enable_bounce_logging"  value="1" <!-- tmpl_if list_settings.enable_bounce_logging -->checked="checked"<!--/tmpl_if --> 
-   </p>
-  </td> 
-  <td> 
-   <p>
-    <label for="enable_bounce_logging"> 
-     Track Bounces
-    </label> 
-   </p>
-  </td>
-  </tr>
-<!-- /tmpl_if --> 
 
    <tr> 
   <td> 
