--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -190,6 +190,14 @@
 		<ul>
 			
 			<li>
+			<a href="#subscriber_activity">
+			Subscriber Activity
+			</a>
+			</li>
+			
+			
+
+			<li>
 			<a href="#opens">
 			Opens
 			</a>
@@ -230,6 +238,21 @@
 			
 		</ul>
 
+	<div id="subscriber_activity">
+		<table class="stripedtable">
+		 <tr> 
+		<td width="350"> 
+		   <div id="message_email_activity_listing_table_loading"></div> 
+		   <div id="message_email_activity_listing_table"></div>
+		  </td> 
+		  <td> 
+		   <div id="message_individual_email_activity_report_table_loading"></div> 
+		   <div id="message_individual_email_activity_report_table" data-width="640" data-height="400" style="width:640px;height:400px"></div>
+		  </td> 
+		 </tr>
+		</table>
+	</div> 
+		
 	<div id="opens">
 		<!-- tmpl_if comment --> 
 		<h2>
