--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -244,7 +244,7 @@ function confirm_profile_removal(form_name) {
 	</li>
 	<li>
 		<p>
-		<a href="<!-- tmpl_var list_unsubscription_link -->">
+		<a href="<!-- tmpl_var list_unsubscribe_link -->">
 			Unsubscribe from this list
 		</a>
 	</p>
