--- a/dada/templates/error_unsub_invalid_email_screen.tmpl
+++ b/dada/templates/error_unsub_invalid_email_screen.tmpl
@@ -8,14 +8,9 @@
  <strong>
   <!-- tmpl_var subscriber.email -->
  </strong>, 
-doesn't seem to pass verification. It's possible that you just typed it in
-incorrectly. You may 
-<a href="#" onclick="history.back(); return false">
-	go back
-</a> 
-and resubmit your address, or use the form below:</p> 
+doesn't seem to pass verification.
 
-<!-- tmpl_var unsubscription_form --> 
+	<!-- tmpl_var unsubscription_form --> 
 
 <!-- tmpl_include error_footer_widget.tmpl -->
 
