--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -42,145 +42,173 @@
 	<legend>The Basics</legend> 
 
 	<div style="border: 1px solid black;">
- 	<table class="stripedtable">
-	<tr> 
-	<td>
-	<p>
-	 <strong> 
-	  Subscribers 
-     </strong> 
-    </p>
-	</td> 
-	<td> 
-	 <p style="text-align:right"> 
-	<!-- tmpl_if num_subscribers --> 
-		<!-- tmpl_var num_subscribers -->
-	<!-- tmpl_else --> 
-		???
-	<!-- /tmpl_if -->
-	</p> 
-	</td>
-	</tr> 
-
-
-
-	<tr class="alt">
-	<td> 
-	 <p>
-	  <strong>
-	 	<a href="#" class="to_opens">Opens</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_opens">
-		Total: <strong><!-- tmpl_var opens --></strong>, Unique: <strong><!-- tmpl_var unique_opens --></strong> - <strong><!-- tmpl_var unique_opens_percent -->%</strong>
 		
-	 </a> 
+	<table style="border:0px;padding:0p;width:100%">
+		<tr>
+		
+				
+					<td style="width:250px;background:#fff"> 
+						<div id="the_basics_opens" data-title="Opens" data-width="250" data-height="150" data-label="Opens"></div>
+						<div id="the_basics_opens_loading"></div>
+					</td> 
+
+					<td style="width:250px;background:#fff"> 
+						<div id="the_basics_unsubscribes" data-title="Unsubscribes" data-width="250" data-height="150" data-label="Unsubscribes"></div>
+						<div id="the_basics_unsubscribes_loading"></div>
+					</td>
+
+					<td style="width:250px;background:#fff"> 
+						<div id="the_basics_bounces" data-title="Bounces" data-width="250" data-height="150" data-label="Opens"></div>
+						<div id="the_basics_bounces_loading"></div>
+
+					</td>
+					
+					
+					<td>
+ 			<table class="stripedtable">
+			<tr> 
+			<td>
+			<p>
+			 <strong> 
+			  Subscribers 
+		     </strong> 
+		    </p>
+			</td> 
+			<td> 
+			 <p style="text-align:right"> 
+			<!-- tmpl_if num_subscribers --> 
+				<!-- tmpl_var num_subscribers -->
+			<!-- tmpl_else --> 
+				???
+			<!-- /tmpl_if -->
+			</p> 
+			</td>
+			</tr> 
+
+
+
+			<tr class="alt">
+			<td> 
+			 <p>
+			  <strong>
+			 	<a href="#" class="to_opens">Opens</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_opens">
+				Total: <strong><!-- tmpl_var opens --></strong>, Unique: <strong><!-- tmpl_var unique_opens --></strong> - <strong><!-- tmpl_var unique_opens_percent -->%</strong>
+		
+			 </a> 
 	
-	 </p>
-	</td> 
-	</tr>
+			 </p>
+			</td> 
+			</tr>
 	
 	
 
-	<tr>
-	<td> 
-	 <p>
-	  <strong>
-	    	  <a href="#" class="to_clickthroughs">Clickthroughs</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_clickthroughs"><!-- tmpl_var clickthroughs --></a>
-	 </p>
-	</td> 
-	</tr>
+			<tr>
+			<td> 
+			 <p>
+			  <strong>
+			    	  <a href="#" class="to_clickthroughs">Clickthroughs</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_clickthroughs"><!-- tmpl_var clickthroughs --></a>
+			 </p>
+			</td> 
+			</tr>
 
 
-	<tr class="alt">
-	<td> 
-	 <p>
-	  <strong>
-	    	  <a href="#" class="to_unsubscribes">Unsubscribes</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_unsubscribes">
-	<strong> 
-		<!-- tmpl_var unsubscribes default="0" -->
-	</strong> 
-	- 
-	<strong> 
-		<!-- tmpl_var unique_unsubscribes_percent -->%
-	</strong> 
-	</a>
-	 </p>
-	</td> 
-	</tr>
+			<tr class="alt">
+			<td> 
+			 <p>
+			  <strong>
+			    	  <a href="#" class="to_unsubscribes">Unsubscribes</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_unsubscribes">
+			<strong> 
+				<!-- tmpl_var unsubscribes default="0" -->
+			</strong> 
+			- 
+			<strong> 
+				<!-- tmpl_var unique_unsubscribes_percent -->%
+			</strong> 
+			</a>
+			 </p>
+			</td> 
+			</tr>
 
 	
 	
-	<tr>
-	<td> 
-	 <p>
-	  <strong>
-	   <a href="#" class="to_bounces">Bounces</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_bounces">
-	Soft: <strong><!-- tmpl_var soft_bounce default="0" --></strong>, 
-	Hard: <strong><!-- tmpl_var hard_bounce  default="0" --></strong> 
-	- <strong><!-- tmpl_var unique_bounces_percent -->%</strong>
-	</a>
-	 </p>
-	</td> 
-	</tr>	
+			<tr>
+			<td> 
+			 <p>
+			  <strong>
+			   <a href="#" class="to_bounces">Bounces</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_bounces">
+			Soft: <strong><!-- tmpl_var soft_bounce default="0" --></strong>, 
+			Hard: <strong><!-- tmpl_var hard_bounce  default="0" --></strong> 
+			- <strong><!-- tmpl_var unique_bounces_percent -->%</strong>
+			</a>
+			 </p>
+			</td> 
+			</tr>	
 	
-	<tr class="alt">
-	<td> 
-	 <p>
-	  <strong>
-	   <a href="#" class="to_archive_views">Archive Views</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_archive_views"><!-- tmpl_var view_archive --></a> 
-	 </p>
-	</td> 
-	</tr>
-	
-	
-	
-	<tr>
-	<td> 
-	 <p>
-	  <strong>
-	   	   <a href="#" class="to_forwards">Forwards</a>
-	  </strong> 
-	 </p> 
-	 </td> 
-	 <td> 
-	 <p style="text-align:right"> 
-	  <a href="#" class="to_forwards"><!-- tmpl_var forward_to_a_friend --></a>
-	 </p>
-	</td> 
-	</tr>
+			<tr class="alt">
+			<td> 
+			 <p>
+			  <strong>
+			   <a href="#" class="to_archive_views">Archive Views</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_archive_views"><!-- tmpl_var view_archive --></a> 
+			 </p>
+			</td> 
+			</tr>
 	
 	
 	
+			<tr>
+			<td> 
+			 <p>
+			  <strong>
+			   	   <a href="#" class="to_forwards">Forwards</a>
+			  </strong> 
+			 </p> 
+			 </td> 
+			 <td> 
+			 <p style="text-align:right"> 
+			  <a href="#" class="to_forwards"><!-- tmpl_var forward_to_a_friend --></a>
+			 </p>
+			</td> 
+			</tr>
 	
+	
+	
+	
+			</table> 
+		</td>
+	
+	 </tr>
 	</table> 
+		
 	</div> 
 	</fieldset>
 
