--- a/dada/templates/plugins/tracker/country_geoip_table.tmpl
+++ b/dada/templates/plugins/tracker/country_geoip_table.tmpl
@@ -1,4 +1,6 @@
-<!-- begin country_geoip_table.tmpl --> 
+
+<!-- begin plugins/tracker/country_geoip_table.tmpl --> 
+
 
 <!-- tmpl_if c_geo_ip_report --> 
 	<div> 
@@ -34,5 +36,4 @@
 	<p class="alert">Nothing to report.</p> 
 <!-- /tmpl_if --> 
 
-<!-- end country_geoip_table.tmpl --> 
-
+<!-- end plugins/tracker/country_geoip_table.tmpl -->
