--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -1,3 +1,5 @@
+<!-- begin plugins/tracker/default.tmpl -->
+
 <!-- tmpl_set name="title" value="Plugins &#187; Tracker" --> 
 <!-- tmpl_set name="load_google_viz" value="1" -->
 
@@ -239,6 +241,5 @@
 </fieldset> 
 
 
-
-
+<!-- end plugins/tracker/default.tmpl -->
 
