--- a/dada/templates/plugins/tracker/individual_country_geoip_report_table.tmpl
+++ b/dada/templates/plugins/tracker/individual_country_geoip_report_table.tmpl
@@ -1,3 +1,5 @@
+<!-- begin plugins/tracker/individual_country_geoip_report_table.tmpl -->
+
 
 <!-- tmpl_unless chrome --> 
 
@@ -77,3 +79,6 @@
 	</div> 
 <!-- /tmpl_unless --> 
 
+
+
+<!-- end plugins/tracker/individual_country_geoip_report_table.tmpl -->
