--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -1,3 +1,8 @@
+<!-- begin plugins/tracker/message_email_report_table.tmpl -->
+
+
+
+
 <!-- tmpl_if report --> 
 	<div> 
 	  <div style="max-width:350px; max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;">
@@ -54,3 +59,6 @@
 <!-- tmpl_else --> 
 	<p class="alert">No <!-- tmpl_var title --> addresses to report.</p> 
 <!-- /tmpl_if -->
+
+
+<!-- end plugins/tracker/message_email_report_table.tmpl -->
