--- a/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_individual_email_activity_report_table.tmpl
@@ -1,3 +1,6 @@
+<!-- begin plugins/tracker/message_individual_email_activity_report_table.tmpl -->
+
+
 <div>
 <div style="max-height: 400px; overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: hidden;font-size:.75em">
 
@@ -48,3 +51,7 @@
 </div> 
 
 </div> 
+
+<!-- end plugins/tracker/message_individual_email_activity_report_table.tmpl -->
+
+
