--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -1,3 +1,6 @@
+<!-- begin plugins/tracker/message_report.tmpl -->
+
+
 <div id="plugins_tracker_message_report"></div> 
 
 
@@ -554,3 +557,5 @@
 	</fieldset> 
 
 <!-- /tmpl_if -->
+
+<!-- end plugins/tracker/message_report.tmpl -->
