--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -1,3 +1,6 @@
+<!-- begin plugins/tracker/clickthrough_table.tmpl --> 
+
+
 <!-- tmpl_if report_by_message_index --> 
 	
 
@@ -224,3 +227,6 @@
 	  No logs to report.
     </p>
 <!-- /tmpl_if --> 
+
+
+<!-- end plugins/tracker/clickthrough_table.tmpl --> 
