--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -69,11 +69,16 @@
 					
 					<td>
  			<table class="stripedtable">
-			<tr> 
+
+ 
+
+			<tr  class="alt"> 
 			<td>
 			<p>
 			 <strong> 
-			  Subscribers 
+			  <a href="#" class="to_subscriber_activity">
+				Subscribers 
+			 </a>
 		     </strong> 
 		    </p>
 			</td> 
@@ -88,6 +93,22 @@
 			</td>
 			</tr> 
 
+			<tr> 
+			<td>
+			<p>
+			 <strong> 
+				<a href="#" class="to_subscriber_activity">
+			 		Message Recipients 
+				</a>
+		     </strong> 
+		    </p>
+			</td> 
+			<td> 
+			 <p style="text-align:right"> 
+				<!-- tmpl_var total_recipients -->
+			</p> 
+			</td>
+			</tr>
 
 
 			<tr class="alt">
