unsub_confirmation_message unsub_confirmation_message_subject
have been removed from the list settings

--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -635,7 +635,7 @@
 			<code>&lt;!-- tmpl_var list_settings.list_name --&gt;</code> 
 		</td>
 		<td>
-			The name of your list. 
+			The name of your mailing list. 
 		</td>
 	</tr>
 	<tr>
@@ -643,7 +643,7 @@
 			<code>&lt;!-- tmpl_var list_settings.info --&gt;</code> 
 		</td>
 		<td>
-			The description of your list. 
+			The description of your mailing list. 
 		</td>
 	</tr>
 	<tr>
@@ -675,19 +675,20 @@
 	<t
 	<tr>
 		<td>
-			<code>&lt;!-- tmpl_var list_confirm_unsubscribe_link --&gt;</code> 
+			<code>&lt;!-- tmpl_var list_settings.physical_address --&gt;</code> 
 		</td>
 		<td>
-			The unsubscription confirmation link. Only used (and also required!) in the, "UnSubscription Confirmation Email" template.
+			The physical address of your mailing list. 
 		</td>
 	</tr>
+
 	
 	<tr>
 		<td>
 			<code>&lt;!-- tmpl_var list_settings.privacy_policy --&gt;</code> 
 		</td>
 		<td>
-			The privacy policy of your list. 
+			The privacy policy of your mailing list. 
 		</td>
 	</tr>
 	<tr>
