modernize multiple_subscribe.cgi a little bit;

--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -251,15 +251,6 @@ $PLUGIN_CONFIGS = {
 
 	},
 
-    blog_index => {
-
-		Default_List                        => undef,
-		Entries                             => undef,
-		Style                               => undef,
-		Allow_QS_Overrides                  => undef,
-		
-    }, 
-
     log_viewer => {	
 
 		Plugin_URL                          => undef,
@@ -282,6 +273,22 @@ $PLUGIN_CONFIGS = {
 		Manual_Run_Passcode                 => undef,
 		Base_Absolute_Path                  => undef, 
 		Base_URL                            => undef, 
+
+	},
+
+    blog_index => {
+
+		Default_List                        => undef,
+		Entries                             => undef,
+		Style                               => undef,
+		Allow_QS_Overrides                  => undef,
+
+	}, 
+
+	multiple_subscribe => {	
+
+		Plugin_Name                         => undef,
+		Plugin_URL                          => undef,
 
 	},
 
